# opencv

./: CMakeLists.txt  README.md  cmake_android_arm.sh  cmake_android_x86.sh  forksync.sh  opencv.sh  platform_source.properties
cmake/: OpenCVFindLibsGrfmt.cmake
modules/androidcamera/camera_wrapper/: CMakeLists.txt  camera_wrapper.cpp
modules/highgui/include/opencv2/highgui/: highgui.hpp  highgui_c.h
modules/highgui/src/: cap.cpp  cap_libv4l.cpp  cap_v4l.cpp  grfmt_tiff.cpp  precomp.hpp
modules/java/generator/src/java/: highgui+VideoCapture.java
modules/world/: CMakeLists.txt
samples/android/15-puzzle/src/org/opencv/samples/puzzle15/: Puzzle15Activity.java
samples/android/camera-calibration/src/org/opencv/samples/cameracalibration/: CameraCalibrationActivity.java
samples/android/color-blob-detection/src/org/opencv/samples/colorblobdetect/: ColorBlobDetectionActivity.java
samples/android/face-detection/src/org/opencv/samples/facedetect/: FdActivity.java
samples/android/hello-android/: CMakeLists.txt  cmake_android.sh  run.sh
samples/android/hello-android/build_armeabi.org.3.0.x/: CMakeCache.txt  Makefile  cmake_install.cmake
samples/android/image-manipulations/src/org/opencv/samples/imagemanipulations/: ImageManipulationsActivity.java
samples/android/native-activity/jni/: Android.mk
samples/android/native-activity/src/org/opencv/samples/NativeActivity/: CvNativeActivity.java
samples/android/tutorial-1-camerapreview/src/org/opencv/samples/tutorial1/: Tutorial1Activity.java
samples/android/tutorial-2-mixedprocessing/jni/: Android.mk
samples/android/tutorial-2-mixedprocessing/src/org/opencv/samples/tutorial2/: Tutorial2Activity.java
samples/android/tutorial-3-cameracontrol/src/org/opencv/samples/tutorial3/: Tutorial3Activity.java
samples/cpp/: freak_demo.cpp
